[package]
name = "mountain-mqtt-embassy"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["mqtt", "embassy"]
categories = [
  "asynchronous",
  "embedded",
  "network-programming",
  "no-std::no-alloc",
  "encoding",
]
description = "A no_std compatible, async MQTT v5 client for embassy, using mountain-mqtt"
repository = "https://github.com/mountainlizard/mountain-mqtt-embassy"
readme = "README.md"

[dependencies]
embassy-net = { version = "0.7.0", features = [
  "defmt",
  "tcp",
  "udp",
  "raw",
  "dhcpv4",
  "medium-ethernet",
  "dns",
] }

embassy-sync = { version = "0.6.2", features = ["defmt"] }

embassy-time = { version = "0.4.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }

embedded-tls = { git = "https://github.com/drogue-iot/embedded-tls.git", features = ["log"], default-features = false }
rand_core = "0.6.3"

defmt = { version = "1.0", optional = true }

mountain-mqtt = { version = "0.2.0", path = "../mountain-mqtt", default-features = false, features = [
  "embedded-io-async",
  "embedded-hal-async",
  "defmt",
] }

[features]
default = ["defmt"]
defmt = ["dep:defmt"]
